--- a/sgim/templates/home.html
+++ b/sgim/templates/home.html
@@ -255,6 +255,8 @@
                                                     <br> <small> Para el {{mantto.fecha_inicio_prevista |date:"l, d F Y"}}</small>
                                                     {% if mantto.fecha_inicio_prevista <= now %}
                                                          Retrazado!
+                                                    {% else %}
+                                                        sdfsdifsduf
                                                     {% endif %}
                                                 </div>
                                             </div>
