--- a/sgim/templates/home.html
+++ b/sgim/templates/home.html
@@ -207,7 +207,9 @@
                                                      Responsable: {{mi_mantto.responsable}} 
                                                     </span>
                                                     <br> <small> Para el {{mi_mantto.fecha_inicio_prevista |date:"l, d F Y"}}</small>
-                                                    
+                                                    {% if mi_mantto.estado.id == 3  %}
+                                                         <p style="color: darkred"> Retrazado! </p>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>  
@@ -254,7 +256,7 @@
                                                     </span>
                                                     <br> <small> Para el {{mantto.fecha_inicio_prevista |date:"l, d F Y"}}</small>
                                                     {% if mantto.estado.id == 3  %}
-                                                         <p style="font-weight: bold; color: darkred"> Retrazado! </p>
+                                                         <p style="color: darkred"> Retrazado! </p>
                                                     {% endif %}
                                                 </div>
                                             </div>
