--- a/sgim/templates/mantto/boletas.html
+++ b/sgim/templates/mantto/boletas.html
@@ -146,7 +146,7 @@ $(document).ready(function() {
                     var viewButton = $("<div class='ui  tiny blue button'> Ver detalles</div>");
                    
                     container.append(viewButton);
-                   // statusbar.append(container);
+                    statusbar.append(container);
                    
                     // add new row.
                     viewButton.click(function (event) {
