--- a/sgim/templates/mantto/nueva_boleta.html
+++ b/sgim/templates/mantto/nueva_boleta.html
@@ -307,7 +307,7 @@ $(document).ready(function() {
                 tools:"bold italic underline  color background | left center right | outdent indent | ul ol | image | link | clean | html"
             });
       */
-$( '#id_descripcion' ).ckeditor({
+$( 'textarea' ).ckeditor({
       
     extraPlugins: 'codesnippet',
     codeSnippet_theme: 'monokai_sublime',
