--- a/sgim/templates/mantto/nueva_boleta.html
+++ b/sgim/templates/mantto/nueva_boleta.html
@@ -29,8 +29,9 @@
 
 
 
-	<script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxeditor.js"></script>
+	<!-- <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxeditor.js"></script> -->
   <script src="{{BOWER_URL}}ckeditor/ckeditor.js"></script>
+  <script src="{{BOWER_URL}}ckeditor/adapters/jquery.js"></script>
 
 {% endblock include_statics %}
 
