Reparando error js en login

--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
-
+    <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
     {% block include_statics %}
         
     {% endblock include_statics %}
@@ -38,7 +38,7 @@
 
     <script>
         $(document).ready(function() {  
-              //  $.material.init();               
+              $.material.init();
         });
     </script>
 
