--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
+         <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>
+        <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
     <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
     {% block include_statics %}
         
@@ -38,7 +40,7 @@
 
     <script>
         $(document).ready(function() {  
-              $.material.init();
+              //$.material.init();
         });
     </script>
 
