Reparando error js en login

--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -115,7 +115,7 @@
                 $("#fb_mantto").jqxTooltip({content: 'Nueva Boleta de Trabajo', position: 'left',});
                 $("#fb_incident").jqxTooltip({content: 'Nuevo Incidente', position: 'left',});
             }catch(err){
-                console.log(err)
+                //console.log(err)
             }
                  //$(".button-collapse").sideNav();
         });
